correção do diretório

--- a/carrinho.html
+++ b/carrinho.html
@@ -12,7 +12,7 @@
     <title>Conexão Brasil</title>
 </head>
 
-<body>
+<body id="carrinho">
     <header>
         <img src="images/logo.png" alt="" id="logo">
         <nav>
@@ -28,10 +28,80 @@
     </header>
 
     <main>
-        <div id="meu_carrinho">Carrinho vazio</div>
+        <section id="sectioncart"> 
+            <h2 id= "meucarrinho">  Meu carrinho</h2>
+            <h4 id="meucarrinho" class="infos"> Carrinho vazio </h4> 
+            <button type="submit" name="compra" id="botaocompra"> Comprar </button> 
+        </section>
+        
 
     </main>
-    <script src="app/app.js"></script>
+    <script> const itens = [
+    {
+    id: 0,
+    nome: 'DestinoFortaleza',
+    valor_pacote: '1500',
+    qtd_dias: '5',
+    classificacao_hotel: '4',
+    companhia_aerea: 'Gol',
+    qtd_pessoas:'1',
+    quantidade: 0
+    },
+    {
+    id: 1,
+    nome: 'DestinoBelem',
+    valor_pacote: '1200',
+    qtd_dias: '5',
+    classificacao_hotel: '4',
+    companhia_aerea: 'Gol',
+    qtd_pessoas:'1',
+    quantidade: 0
+  },
+  {
+    id: 2,
+    nome: 'DestinoCuiaba',
+    valorpacote: '1000',
+    qtd_dias: '5',
+    classificacao_hotel: '4',
+    companhia_aerea: 'Gol',
+    qtd_pessoas:'1',
+    quantidade: 0
+  },
+  {
+    id: 3,
+    nome: 'DestinoRiodeJaneiro',
+    valor_pacote: '1200',
+    qtd_dias: '5',
+    classificacao_hotel: '4',
+    companhia_aerea: 'Gol',
+    qtd_pessoas:'1',
+    quantidade: 0
+  },
+  {
+    id: 3,
+    nome: 'DestinoFlorianopolis',
+    valor_pacote: '900',
+    qtd_dias: '5',
+    classificacao_hotel: '4',
+    companhia_aerea: 'Gol',
+    qtd_pessoas:'1',
+    qauntidade: 0
+  },
+]
+
+inicializarLoja = () => {
+    var containerProdutos = document.querySelector("#destinoslista");
+    itens.map((val)=>{
+    containerProdutos.innerHTML+= `
+    
+    `;
+    })
+
+  }
+  
+  inicializarLoja();
+  
+  </script>
 </body>
 
 </html>
