--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </header>
 
     <main>
+        <div id="produtos">
         <ul id="destinoslista">
             <li>
                 <div id="fortaleza" , class="destinos">
@@ -88,6 +89,7 @@
                 </div>
             </li>
         </ul>
+        </div>
 
 
 
